@@ -1,16 +1,16 @@
 
 #define PACKAGE_NAME    "QjackCtl"
-#define PACKAGE_VERSION "0.3.0.6"
-
+#define PACKAGE_VERSION "0.3.0.7"
 
 #define CONFIG_PREFIX   "."
 #define CONFIG_DEBUG    1
 
 #define CONFIG_JACK_TRANSPORT
 #define CONFIG_JACK_REALTIME
+#define CONFIG_JACK_STATISTICS
+#define CONFIG_JACK_XRUN_DELAY
+#define CONFIG_JACK_MAX_DELAY
 
-#undef  CONFIG_JACK_XRUN_DELAY
-#undef  CONFIG_JACK_MAX_DELAY
 #undef  CONFIG_SYSTEM_TRAY
 #undef  CONFIG_JACK_MIDI
 #undef  CONFIG_ALSA_SEQ
